--- a/development/requirements.txt
+++ b/development/requirements.txt
@@ -1,4 +1,4 @@
-Django==2.1
+Django==2.2
 djangorestframework==3.9.0
 mysqlclient==1.3.12
 openapi-codec==1.3.2
@@ -9,3 +9,4 @@ simplejson==3.16.0
 six==1.11.0
 sqlparse==0.2.4
 uWSGI==2.0.17.1
+unicodecsv==0.14.1
